--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,6 @@
-*.py[cod]
-
-# C extensions
-*.so
-
-# Packages
-*.egg
-*.egg-info
-dist
-build
-eggs
-parts
-bin
-var
-sdist
-develop-eggs
-.installed.cfg
-lib
-lib64
-
-# Installer logs
-pip-log.txt
-
-# Unit test / coverage reports
-.coverage
-.tox
-nosetests.xml
-
-# Translations
-*.mo
-
-# Mr Developer
-.mr.developer.cfg
-.project
-.pydevproject
+files
+swift-drive.debhelper.log
+swift-drive.postinst.debhelper
+swift-drive.prerm.debhelper
+swift-drive.substvars
+swift-drive
